# trade-news

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20260413_0001_initial_schema.py  20260414_0002_add_event_deduplication.py
api/: main.py  schemas.py  security.py
api/core/: config.py
api/db/: crud.py  models.py  session.py
api/jobs/: scheduler.py
api/providers/: execution.py  market.py  news.py  registry.py
api/routes/: auth.py  execution.py  health.py  pipeline.py  providers.py  validation.py
api/services/: alerts.py  classification.py  execution.py  extraction.py  ingestion.py  mapping.py  pipeline.py  reaction.py  recommendation.py  schwab_oauth.py  scoring.py  validation.py
dashboard/: app.py
docs/: roadmap_presentation_non_technical.html
docs/branding/logos/: preview.html
infra/: docker-compose.yml
tests/: test_execution.py  test_extraction.py  test_pipeline_integration.py  test_providers.py  test_scoring.py  test_security.py
