[project]
name = "trade-news"
version = "0.1.0"
description = "Trade News MVP - convert news into explainable trading signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.41",
  "alembic>=1.16.4",
  "psycopg[binary]>=3.2.9",
  "httpx>=0.28.1",
  "apscheduler>=3.10.4",
  "streamlit>=1.44.1",
  "pandas>=2.2.3"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.0"
]
